--- a/Kasa/src/pages/About/About.css
+++ b/Kasa/src/pages/About/About.css
@@ -6,7 +6,7 @@
     border: none;
     color: white;
     font-size: 30px;
-    width: 350px;
+    width: 800px;
     border-radius: 10px;
   margin-top: 20px;
   }
@@ -16,11 +16,12 @@
     justify-content: center;
     align-items: center;
 
+
   }
 .dropdown-content-a{
 
-  background-color: grey;
-  width: 350px;
+  background-color: #f0f0f0;
+  width: 800px;
 }
 @media only screen and (max-width: 767px) {
   .DropDownMenuAbout {
