--- a/Kasa/src/pages/About/About.css
+++ b/Kasa/src/pages/About/About.css
@@ -1,37 +1,56 @@
-.DropDownMenuAbout{
+.about-content {
+    padding: 1px;
+  }
+  
+  .DivInsideImage {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .BackgroundImageStyled {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 25px;
+  }
+  
+  .DropDownAbout {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    margin-top: 20px;
+  }
+  
+  .dropdown-content {
+    background-color: #f0f0f0;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+  }
+  
+  .about-dropdown {
+    display: flex;
+    justify-content: space-between;
     padding: 10px;
     background-color: #ff6060;
     border: none;
     color: white;
-    font-size: 30px;
-    width: 800px;
-    border-radius: 10px;
-  margin-top: 20px;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
   }
-  .DropDownAbout {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-
-  }
-.dropdown-content-a{
-
-  background-color: #f0f0f0;
-  width: 800px;
+  @media only screen and (max-width: 767px)
+{
+.DropDownMenu {
+    margin-top: 50px;
+    width: 375px;
 }
-@media only screen and (max-width: 767px) {
-  .DropDownMenuAbout {
-    width: 320px;
-      font-size: 24px;
-      padding: 10px;
-  }
+.dropdown-content{
+width: 375px;
 
-  .dropdown-content-a{
-    width: 320px;
 
-  }
+}
 }
