maj taille et correspondance

--- a/Kasa/src/components/DisplayData/DataDisplay.css
+++ b/Kasa/src/components/DisplayData/DataDisplay.css
@@ -21,6 +21,8 @@
   }
   .card h2{
 position:relative;
-bottom: 90px;
+bottom: 60px;
 color: white;
-  }
+font-size: 18px; 
+line-height: 
+25.67px; }
