--- a/Kasa/src/pages/NotFound/NotFound.css
+++ b/Kasa/src/pages/NotFound/NotFound.css
@@ -6,17 +6,38 @@
     align-items: center;
 }
 .error404{
-font-size: 350px;
-
+font-size: 288px;
+font-weight: 700;
 
 }
 .message-error{
     color:#ff828a;
-font-size:50px ;
-
+font-size:36px ;
+font-weight: 500;
 }
 .return-home{
-font-size: 30px;
+font-size:18px ;
 text-decoration: underline;
-
+font-weight: 500;
 }
+
+@media only screen and (max-width: 768px) {
+    .error404{
+        font-size: 96px;
+        font-weight: 700;
+        
+        }
+        .message-error{
+            color:#ff828a;
+        font-size:
+        18px ;
+        font-weight: 500;
+        text-align: center;
+        }
+        .return-home{
+        font-size:14px ;
+        text-decoration: underline;
+        font-weight: 500;
+        }
+        
+  }
