--- a/Kasa/src/pages/Home/Home.css
+++ b/Kasa/src/pages/Home/Home.css
@@ -238,7 +238,10 @@ li {
 
 }
 @media only screen and (max-width: 767px) {
-
+  .carousel-buttons img {
+width: 50px;
+  }
+  
   .location {
     font-size: 16px;
   }
@@ -254,11 +257,11 @@ li {
 
   .DropDownMenu {
     margin-top: 50px;
-    width: 100%;
+    width: 350px;
   }
   .dropdown-content {
 
-    width: 100%;
+    width: 350px;
   }
   .carousel-container {
     height: auto;
@@ -324,6 +327,7 @@ li {
 
     width: 350px;
   }
+
 }
 
 
