--- a/Kasa/src/pages/Homepage/Homepage.css
+++ b/Kasa/src/pages/Homepage/Homepage.css
@@ -21,7 +21,12 @@
     font-size: 50px;
     color: white;
     font-weight: 700;
-    -webkit-text-stroke: 2px black;
+    color: #fff;
+    text-shadow:
+      1px 1px 1px #000,
+      -1px 1px 1px #000,
+      -1px -1px 0 #000,
+      1px -1px 0 #000;
   }
   
   .DivBody {
