--- a/Kasa/src/components/Header/Header.css
+++ b/Kasa/src/components/Header/Header.css
@@ -54,3 +54,17 @@ header {
 
 
 }
+
+@media only screen and (max-width: 320px) {
+  .liHeader a {
+    font-size: 17px;
+    text-decoration: none;
+    color: inherit;
+  }
+  header {
+
+    padding: 5px 5px;
+
+    margin: 3px 3px;
+  }
+}
