--- a/Kasa/src/pages/Home/Home.css
+++ b/Kasa/src/pages/Home/Home.css
@@ -79,7 +79,7 @@ h1 {
   border: none;
   color: white;
   font-size: 18px;
-  width: 650px;
+  width: 750px;
   font-weight: 700;
   border-radius: 10px;
   font-family: 'Montserrat';
@@ -111,6 +111,7 @@ h1 {
   width: 100%;
   max-width: 2000px;
   height: 700px;
+  max-height: 100%;
   margin: auto;
   position: relative;
   overflow: hidden;
@@ -125,9 +126,9 @@ h1 {
 
 .carousel img {
   width: 100%;
-  height: auto;
+  height: 700px;
   min-width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .carousel-buttons {
@@ -197,7 +198,13 @@ li {
 }
 
 @media only screen and (max-width: 767px) {
-  .carousel-buttons img {
+
+  .carousel-container {
+    height: 300px; /* Ajustez la hauteur pour les petits écrans */
+  }
+  
+  .carousel img {
+    height: 300px;
     width: 50px;
   }
 
@@ -266,13 +273,25 @@ li {
     margin: 5px;
   }
 
-  .DropDownMenu,
+  .DropDownMenu
+  {
+    width: 350px;
+
+  }
   .dropdown-content {
-    width: 345px;
+width: 330px;
+
   }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
+  .carousel-container {
+    height: 500px; /* Ajustez la hauteur pour les écrans moyens */
+  }
+  
+  .carousel img {
+    height: 500px;
+  }
   .DropDownMenu,
   .dropdown-content {
     width: 350px;
@@ -287,6 +306,15 @@ li {
 }
 
 @media (min-width: 1200px) and (max-width: 1418px) {
+  .carousel-container {
+    height: 600px; /* Ajustez la hauteur pour les grands écrans */
+  }
+  
+  .carousel img {
+    height: 600px;
+  }
+
+
   .DropDownMenu,
   .dropdown-content {
     width: 450px;
@@ -303,4 +331,52 @@ li {
   font-size: 18px;
   border-radius: 5px;
   cursor: pointer;
+}
+@media only screen and (max-width: 320px) {
+  .carousel-container {
+    height: 250px; /* Ajustez la hauteur pour les très petits écrans */
+  }
+  .carousel-button img{
+
+    width: 50px;
+      }
+  .host-picture {
+    width: 80px;
+    border-radius: 50%;
+}
+  .carousel img {
+    height: 250px;
+  }
+  .DropDownMenu
+  {
+    width: 310px;
+    max-width: 100%;
+  }
+  .dropdown-content {
+width: 300px;
+max-width: 100%;
+  }
+}
+
+@media (min-width:425px) and (max-width: 767px) {
+
+  .carousel-container {
+    height: 350px; 
+  }
+  
+  .carousel img {
+    height: 350px;
+  }
+
+  .DropDownMenu
+  {
+    width: 767px;
+    max-width: 100%;
+
+  }
+  .dropdown-content {
+    width: 760px;
+    max-width: 100%;
+
+  }
 }
