--- a/Kasa/src/pages/Home/Home.css
+++ b/Kasa/src/pages/Home/Home.css
@@ -90,7 +90,7 @@ h1 {
   padding: 10px;
   flex-direction: column;
   align-items: flex-start;
-  width: 650px;
+  width: 730px;
   max-height: 500px;
   opacity: 1;
 }
@@ -104,7 +104,6 @@ h1 {
 .flex-b {
   padding: 0;
   margin: 0;
-
 }
 
 .carousel-container {
@@ -197,8 +196,8 @@ li {
   list-style-type: none;
 }
 
+/* Media Queries */
 @media only screen and (max-width: 767px) {
-
   .carousel-container {
     height: 300px; /* Ajustez la hauteur pour les petits écrans */
   }
@@ -221,13 +220,13 @@ li {
     margin-top: 40px;
   }
 
-
   .dropdown-content {
-
     width: 350px;
   }
-  .DropDownMenu{margin-top: 30px;}
 
+  .DropDownMenu {
+    margin-top: 30px;
+  }
 
   .carousel-container {
     height: auto;
@@ -273,14 +272,12 @@ li {
     margin: 5px;
   }
 
-  .DropDownMenu
-  {
+  .DropDownMenu {
     width: 350px;
-
   }
-  .dropdown-content {
-width: 330px;
 
+  .dropdown-content {
+    width: 330px;
   }
 }
 
@@ -292,6 +289,7 @@ width: 330px;
   .carousel img {
     height: 500px;
   }
+
   .DropDownMenu,
   .dropdown-content {
     width: 350px;
@@ -314,10 +312,60 @@ width: 330px;
     height: 600px;
   }
 
-
   .DropDownMenu,
   .dropdown-content {
     width: 450px;
+  }
+}
+
+@media only screen and (min-width: 320px) {
+  .carousel-container {
+    height: 250px; /* Ajustez la hauteur pour les très petits écrans */
+  }
+
+  .carousel img {
+    height: 250px;
+  }
+
+  .carousel-button img {
+    width: 50px;
+  }
+
+  .host-picture {
+    width: 80px;
+    border-radius: 50%;
+  }
+
+  .DropDownMenu {
+    width: 310px;
+    max-width: 100%;
+  }
+
+  .dropdown-content {
+    width: 300px;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .carousel-container {
+    height: 350px;
+  }
+  .carousel-button img {
+    width: 50px;
+  }
+  .carousel img {
+    height: 350px;
+  }
+
+  .DropDownMenu {
+    width: 767px;
+    max-width: 100%;
+  }
+
+  .dropdown-content {
+    width: 760px;
+    max-width: 100%;
   }
 }
 
@@ -331,52 +379,4 @@ width: 330px;
   font-size: 18px;
   border-radius: 5px;
   cursor: pointer;
-}
-@media only screen and (max-width: 320px) {
-  .carousel-container {
-    height: 250px; /* Ajustez la hauteur pour les très petits écrans */
-  }
-  .carousel-button img{
-
-    width: 50px;
-      }
-  .host-picture {
-    width: 80px;
-    border-radius: 50%;
-}
-  .carousel img {
-    height: 250px;
-  }
-  .DropDownMenu
-  {
-    width: 310px;
-    max-width: 100%;
-  }
-  .dropdown-content {
-width: 300px;
-max-width: 100%;
-  }
-}
-
-@media (min-width:425px) and (max-width: 767px) {
-
-  .carousel-container {
-    height: 350px; 
-  }
-  
-  .carousel img {
-    height: 350px;
-  }
-
-  .DropDownMenu
-  {
-    width: 767px;
-    max-width: 100%;
-
-  }
-  .dropdown-content {
-    width: 760px;
-    max-width: 100%;
-
-  }
 }
