--- a/Kasa/src/pages/Home/Home.css
+++ b/Kasa/src/pages/Home/Home.css
@@ -86,7 +86,7 @@ h1 {
 }
 
 .dropdown-content {
-  background-color: #f0f0f0;
+  background-color: #F6F6F6;
   padding: 10px;
   flex-direction: column;
   align-items: flex-start;
