--- a/Kasa/src/index.css
+++ b/Kasa/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
 body{
 font-family: 'Montserrat';
 
@@ -10,3 +15,22 @@ a{
 text-decoration: none;
 color: black;
 }
+
+.footer {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 90px;
+    margin-top: 80px;
+  }
+  
+  .iconFooter {
+    width: 200px;
+    display: flex;
+  }
+  
+  .StyledFooterParagraph {
+    font-size: 40px;
+    color: white;
+  }
